--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "illacceptanything",
+  "scripts": {
+    "lint": "jslint *.js"
+  },
   "devDependencies": {
     "benchmark": "1.x.x",
     "bower": "~1.3.9",
@@ -32,6 +35,7 @@
     "jasmine-node": "~1.14.5",
     "jasmine-reporters": "~1.0.1",
     "jshint-stylish": "~1.0.0",
+    "jslint": "^0.9.0-pre006",
     "karma": "0.12.32",
     "karma-browserstack-launcher": "0.1.2",
     "karma-chrome-launcher": "0.1.5",
@@ -55,6 +59,5 @@
     "shelljs": "~0.3.0",
     "sorted-object": "^1.0.0",
     "stringmap": "^0.2.2"
-  },
-  "dependencies": {}
+  }
 }
