--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "illacceptanything",
   "devDependencies": {
     "benchmark": "1.x.x",
-    "bower": "~1.3.9",
+    "bower": "^1.4.1",
     "browserstacktunnel-wrapper": "~1.3.1",
     "canonical-path": "0.0.2",
     "cheerio": "^0.17.0",
